# Rechtssoftware

./: .editorconfig  .gitignore  AGENTS.md  BOOTSTRAP.md  CHANGELOG.md  README.md  WORKING-METHOD.md  ecosystem.manifest.json  playwright.config.js  pyproject.toml
.specify/memory/: constitution.md
docs/architecture/: ADR-007-legal-source-provenance.md  ADR-008-case-legal-timeline.md  adr-001-local-modular-monolith.md  adr-002-confirmed-reference-events.md  adr-003-local-confirmation-workspace.md  architecture.md  m7a-reality-refresh.md
docs/operations/: backup-and-restore.md  local-installation.md  local-release-verification.md
docs/reports/: M1-M4-consolidation.md  M1-greenfield-foundation.md  M1-independent-analysis.md  M5-deadline-candidates.md  M5-pr2-independent-review.md  M6A-hermes-snapshot-S0.md  M6A-hermes-snapshot-S1.md  M6A-pr5-exception-logging-policy-closure.md  M6A-pr5-independent-implementation-review.md  M6A-pr5-logging-handler-wiring-repair.md  M6A-pr5-logging-privacy-repair.md  M6A-research-spec-architecture.md  M6UI-integration-release-closure.md  M6UI-slice2-confirm-reject-manual-closure.md  M6UI-slice4-calculation-preview-trace-closure.md  M7A1-browser-e2e-accessibility.md  M7A1-live-gii-validation.md  M7A1-reality-refresh.md  M7A1-trusted-operations-closure.md
docs/security/: privacy-and-security-invariants.md
scripts/: run-m6ui-rc-e2e.py  test_rc_restart_idempotency.py
specs/001-greenfield-case-core/: data-model.md  plan.md  spec.md  tasks.md
specs/002-document-import/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/003-text-extraction/: IMPL_PLAN.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-document-classification/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-deadline-candidates/: IMPL_PLAN.md  data-model.md  quickstart.md  research.md  spec.md  tasks.md
specs/006a-reference-events-calendar-arithmetic/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md  test-vectors.md
specs/006ui-local-confirmation-workspace/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-m7b-incremental-gii-sync/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
src/private_legal_navigator/: __init__.py  __main__.py  app.py  config.py
tests/api/: test_cases_api.py  test_deadline_api.py  test_documents_api.py  test_event_api.py  test_event_logging_privacy.py  (+1 more)
(+167 files in other folders)
