[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "private-legal-navigator"
version = "0.1.0"
description = "Lokale, datenschutzorientierte Unterstützung bei eigenen rechtlichen und behördlichen Angelegenheiten"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [
    {name = "Raik Müller"},
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
]

dependencies = [
    "fastapi>=0.115.0",
    "jinja2>=3.1",
    "pymupdf>=1.24.0",
    "python-multipart>=0.0.9",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.11.0",
    "mypy>=1.11.0",
]

[project.urls]
Repository = "https://github.com/xxammaxx/Rechtssoftware"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"private_legal_navigator.presentation" = ["templates/**/*.html", "static/**/*.css"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["private_legal_navigator"]

[tool.mypy]
python_version = "3.11"
strict = true
show_error_codes = true
warn_unused_configs = true
warn_unreachable = true
exclude = ["\\.venv", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
ignore_errors = false
disallow_untyped_defs = false

[tool.coverage.run]
source = ["src/private_legal_navigator"]
omit = ["tests/*", "*/__init__.py"]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
